--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <version>5.10.0</version>
             <scope>test</scope>
         </dependency>
+
+        <dependency>
+            <groupId>org.python</groupId>
+            <artifactId>jython-slim</artifactId>
+            <version>2.7.3b1</version>
+        </dependency>
     </dependencies>
 
     <build>
@@ -53,6 +59,24 @@
                 </configuration>
             </plugin>
 
+			<plugin>
+				<groupId>net.sf.mavenjython</groupId>
+				<artifactId>jython-compile-maven-plugin</artifactId>
+				<version>1.3</version>
+				<executions>
+					<execution>
+						<phase>package</phase>
+						<goals>
+							<goal>jython</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<libraries>
+						<param>openai</param>
+					</libraries>
+				</configuration>
+			</plugin>
         </plugins>
     </build>
 
