--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
-        uses: actions/checkout@3
+        uses: actions/checkout@v3
 
       - name: Setup JDK
         uses: actions/setup-java@v3
