--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -18,7 +18,8 @@ jobs:
       - name: Setup JDK
         uses: actions/setup-java@v3
         with:
-          java-version: 17
+          java-version: '17'
+          distribution: 'oracle'
 
       - name: Build project with Maven
         run: mvn -B package --file pom.xml
