--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -22,4 +22,6 @@ jobs:
           distribution: 'oracle'
 
       - name: Build project with Maven
+        env:
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
         run: mvn -B package --file pom.xml
