change maven compiler version

--- a/.github/workflows/junit.yml
+++ b/.github/workflows/junit.yml
@@ -28,5 +28,5 @@ jobs:
       - name: Build project with Maven
         env:
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
-        run: mvn --version
-        # run: mvn -B package --file pom.xml
+        # run: mvn --version
+        run: mvn -B package --file pom.xml
