--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  url_launcher: ^6.1.12
+  file_picker: ^5.3.4
+  screen_capturer: ^0.1.7
+  sidebarx: ^0.16.1
 
 dev_dependencies:
   flutter_test:
