--- a/flutter_app/pubspec.yaml
+++ b/flutter_app/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   screen_capturer: ^0.1.7
   sidebarx: ^0.16.1
   path_provider: ^2.1.0
+  http: ^1.1.0
+  http_parser: ^4.0.2
 
 dev_dependencies:
   flutter_test:
